crp_utils/parsers/roll20_rolls_simple.js
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/
(function(root) {
  "use strict";



    const KEEP_DROP_WHICH = {"h": "high", "l": "low"};
    const SORT_ORDER = {"a": "ascending", "d": "descending"};

    function makeBinaryOperator(head, tail, operatorIndex=0, rightIndex=1) {
        return tail.reduce(
            function (left, array) {
                return {
                    type: "binary_operator",
                    operator: array[operatorIndex],
                    left: left,
                    right: array[rightIndex]
                };
            },
            head
        );
    }

    function makeFunctionCall(name, expression) {
        return {
            type: "function_call",
            name: name,
            argument: expression
        };
    }

    function makeDiceModifier(name, compare_point=null) {
        obj = {
            type: "modifier",
            name: name
        };
        if (compare_point) {
            obj.compare_point = compare_point.operator;
        }
        return obj;
    }

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = "+";
  var peg$c1 = "-";
  var peg$c2 = "*";
  var peg$c3 = "/";
  var peg$c4 = "%";
  var peg$c5 = "**";
  var peg$c6 = "[";
  var peg$c7 = "]";
  var peg$c8 = "dF";
  var peg$c9 = "d";
  var peg$c10 = "!";
  var peg$c11 = "!!";
  var peg$c12 = "!p";
  var peg$c13 = "r";
  var peg$c14 = "o";
  var peg$c15 = "k";
  var peg$c16 = "h";
  var peg$c17 = "l";
  var peg$c18 = "s";
  var peg$c19 = "a";
  var peg$c20 = "f";
  var peg$c21 = "m";
  var peg$c22 = "t";
  var peg$c23 = "<";
  var peg$c24 = "=";
  var peg$c25 = ">";
  var peg$c26 = "floor";
  var peg$c27 = "round";
  var peg$c28 = "ceil";
  var peg$c29 = "abs";
  var peg$c30 = "(";
  var peg$c31 = ")";
  var peg$c32 = ".";
  var peg$c33 = "0";
  var peg$c34 = "e";

  var peg$r0 = /^[^[\]]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[1-9]/;
  var peg$r3 = /^[+\-]/;
  var peg$r4 = /^[ \\t]/;

  var peg$e0 = peg$literalExpectation("+", false);
  var peg$e1 = peg$literalExpectation("-", false);
  var peg$e2 = peg$literalExpectation("*", false);
  var peg$e3 = peg$literalExpectation("/", false);
  var peg$e4 = peg$literalExpectation("%", false);
  var peg$e5 = peg$literalExpectation("**", false);
  var peg$e6 = peg$otherExpectation("inline label");
  var peg$e7 = peg$literalExpectation("[", false);
  var peg$e8 = peg$classExpectation(["[", "]"], true, false);
  var peg$e9 = peg$literalExpectation("]", false);
  var peg$e10 = peg$anyExpectation();
  var peg$e11 = peg$otherExpectation("dice");
  var peg$e12 = peg$literalExpectation("dF", false);
  var peg$e13 = peg$literalExpectation("d", false);
  var peg$e14 = peg$literalExpectation("!", false);
  var peg$e15 = peg$literalExpectation("!!", false);
  var peg$e16 = peg$literalExpectation("!p", false);
  var peg$e17 = peg$literalExpectation("r", false);
  var peg$e18 = peg$literalExpectation("o", false);
  var peg$e19 = peg$literalExpectation("k", false);
  var peg$e20 = peg$literalExpectation("h", false);
  var peg$e21 = peg$literalExpectation("l", false);
  var peg$e22 = peg$literalExpectation("s", false);
  var peg$e23 = peg$literalExpectation("a", false);
  var peg$e24 = peg$literalExpectation("f", false);
  var peg$e25 = peg$literalExpectation("m", false);
  var peg$e26 = peg$literalExpectation("t", false);
  var peg$e27 = peg$literalExpectation("<", false);
  var peg$e28 = peg$literalExpectation("=", false);
  var peg$e29 = peg$literalExpectation(">", false);
  var peg$e30 = peg$literalExpectation("floor", false);
  var peg$e31 = peg$literalExpectation("round", false);
  var peg$e32 = peg$literalExpectation("ceil", false);
  var peg$e33 = peg$literalExpectation("abs", false);
  var peg$e34 = peg$literalExpectation("(", false);
  var peg$e35 = peg$literalExpectation(")", false);
  var peg$e36 = peg$otherExpectation("integer");
  var peg$e37 = peg$otherExpectation("number");
  var peg$e38 = peg$literalExpectation(".", false);
  var peg$e39 = peg$literalExpectation("0", false);
  var peg$e40 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e41 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e42 = peg$literalExpectation("e", true);
  var peg$e43 = peg$classExpectation(["+", "-"], false, false);
  var peg$e44 = peg$otherExpectation("whitespace");
  var peg$e45 = peg$classExpectation([" ", "\\", "t"], false, false);

  var peg$f0 = function(head, tail) {
          return makeBinaryOperator(head, tail, 1, 3);
      };
  var peg$f1 = function(head, tail) {
          return makeBinaryOperator(head, tail, 1, 3);
      };
  var peg$f2 = function(head, tail) {
          return makeBinaryOperator(head, tail);
      };
  var peg$f3 = function(term, label) {
          term["label"] = label;
          return term;
      };
  var peg$f4 = function(label) {
          return label;
      };
  var peg$f5 = function(amount) {
          return {
              type: "dice",
              amount: amount,
              sides: "F"
          };
      };
  var peg$f6 = function(amount, sides) {
          return {
              type: "dice",
              amount: amount,
              sides: sides
          };
      };
  var peg$f7 = function(explode, compound, penetrating, reroll) {
          return {
              expoding: exploding,
              compound: compound,
              penetrating: penetrating,
              reroll:reroll
          };
      };
  var peg$f8 = function(cp) {
          return makeDiceModifier("exploding", cp);
      };
  var peg$f9 = function(cp) {
          return makeDiceModifier("compounding", cp);
      };
  var peg$f10 = function(cp) {
          return makeDiceModifier("penetrating", cp);
      };
  var peg$f11 = function(rerolls) {
          // TODO!!
      };
  var peg$f12 = function(once, cp) {
          name = once ? "reroll_once" : "reroll";
          return makeDiceModifier(name, cp);
      };
  var peg$f13 = function(keep, drop) {
          return {keep:keep, drop:drop};
      };
  var peg$f14 = function(amount) {
          obj = makeDiceModifier("keep");
          obj.which = KEEP_DROP_WHICH[param ? param : "h"];
          obj.amount = amount;
          return obj;
      };
  var peg$f15 = function(amount) {
          obj = makeDiceModifier("drop");
          bj.which = KEEP_DROP_WHICH[param ? param : "l"];
          obj.amount = amount;
          return obj;
      };
  var peg$f16 = function(sort) {
          return {sort: sort};
      };
  var peg$f17 = function() {
          obj = makeDiceModifier("sort");
          obj.order = SORT_ORDER[order ? order : "a"];
          return obj;
      };
  var peg$f18 = function(success, failure) {
          return {
              success: success,
              failure: failure
          };
      };
  var peg$f19 = function(cp) {
          return makeDiceModifier("success", cp);
      };
  var peg$f20 = function(cp) {
          return makeDiceModifier("failure", cp);
      };
  var peg$f21 = function(result, group_size) {
          obj = makeDiceModifier("match_result");
          obj.change_result = result ? true : false;
          obj.group_size = group_size ? group_size : 2;
          return obj;
      };
  var peg$f22 = function(target) {
          return {
              type: "compare_point",
              operator: operator ? operator : "=",
              target: target
          }
      };
  var peg$f23 = function(expression) {
          return makeFunctionCall(name, expression);
      };
  var peg$f24 = function(expression) {
          return expression
      };
  var peg$f25 = function() {
          return parseInt(text());
      };
  var peg$f26 = function() {
          return parseFloat(text());
      };
  var peg$f27 = function() {
          return parseFloat(text());
      };
  var peg$f28 = function() {
          return parseFloat(text());
      };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0;

    s0 = peg$parseAddition();

    return s0;
  }

  function peg$parseAddition() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseMultiplication();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsews();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsews();
      }
      s3 = [];
      s4 = peg$currPos;
      s5 = [];
      s6 = peg$parsews();
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$parsews();
      }
      if (input.charCodeAt(peg$currPos) === 43) {
        s6 = peg$c0;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 === peg$FAILED) {
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 45) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          s7 = peg$parsews();
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parsews();
          }
          s7 = peg$parseMultiplication();
          if (s7 !== peg$FAILED) {
            s5 = [s5, s6, s7];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = [];
          s6 = peg$parsews();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parsews();
          }
          if (input.charCodeAt(peg$currPos) === 43) {
            s6 = peg$c0;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            s4 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 45) {
              s5 = peg$c1;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e1); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parsews();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parsews();
              }
              s7 = peg$parseMultiplication();
              if (s7 !== peg$FAILED) {
                s5 = [s5, s6, s7];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseMultiplication();
    }

    return s0;
  }

  function peg$parseMultiplication() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseExponentiation();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsews();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsews();
      }
      s3 = [];
      s4 = peg$currPos;
      s5 = [];
      s6 = peg$parsews();
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$parsews();
      }
      if (input.charCodeAt(peg$currPos) === 42) {
        s6 = peg$c2;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 47) {
          s4 = peg$c3;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s4 === peg$FAILED) {
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 37) {
            s5 = peg$c4;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$parsews();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parsews();
            }
            s7 = peg$parseExponentiation();
            if (s7 !== peg$FAILED) {
              s5 = [s5, s6, s7];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = [];
          s6 = peg$parsews();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parsews();
          }
          if (input.charCodeAt(peg$currPos) === 42) {
            s6 = peg$c2;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 47) {
              s4 = peg$c3;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
            if (s4 === peg$FAILED) {
              s4 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 37) {
                s5 = peg$c4;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e4); }
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parsews();
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parsews();
                }
                s7 = peg$parseExponentiation();
                if (s7 !== peg$FAILED) {
                  s5 = [s5, s6, s7];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseExponentiation();
    }

    return s0;
  }

  function peg$parseExponentiation() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseTerm();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c5) {
        s4 = peg$c5;
        peg$currPos += 2;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseTerm();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          if (input.substr(peg$currPos, 2) === peg$c5) {
            s4 = peg$c5;
            peg$currPos += 2;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseTerm();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseTerm();
    }

    return s0;
  }

  function peg$parseTerm() {
    var s0;

    s0 = peg$parseLabelledTerm();
    if (s0 === peg$FAILED) {
      s0 = peg$parseUnlabelledTerm();
    }

    return s0;
  }

  function peg$parseLabelledTerm() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseUnlabelledTerm();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsews();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsews();
      }
      s3 = peg$parseLabel();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLabel() {
    var s0, s1, s2, s3;
